fix menu overflow

--- a/assets/scss/_circular-menu.scss
+++ b/assets/scss/_circular-menu.scss
@@ -1,4 +1,5 @@
 .circular-menu {
+  position: relative;
   $items: 6;
   $angleBetween: 360deg / $items;
 
