--- a/assets/scss/_fab-menu.scss
+++ b/assets/scss/_fab-menu.scss
@@ -1,4 +1,6 @@
 .fab-menu {
+  margin-top: 10%;
+  position: relative;
   $items: 5;
   $angleBetween: 180deg / $items;
 
