--- a/public/main.css
+++ b/public/main.css
@@ -1,13 +1,12 @@
-@import url(/node_modules/normalize.css/normalize.css);
 section {
   height: 100vh;
   width: 100%;
   overflow: hidden;
   display: flex;
-  align-items: center;
   justify-content: center;
   position: relative; }
   section:nth-of-type(1) {
+    align-items: center;
     background-color: #48A9A6;
     background: linear-gradient(to right, #48A9A6, #96deda); }
   section:nth-child(2) {
@@ -16,6 +15,7 @@ section {
     background: linear-gradient(to right, #DA9095, #D1C8E1); }
 
 .circular-menu {
+  position: relative;
   width: 70px;
   height: 70px; }
   .circular-menu .label {
@@ -102,6 +102,8 @@ section {
       font-size: 1.6em; }
 
 .fab-menu {
+  margin-top: 10%;
+  position: relative;
   width: 70px;
   height: 70px; }
   .fab-menu .label {
